--- a/index.html
+++ b/index.html
@@ -22,10 +22,39 @@
 
 <body>
 
-	<div class="container">
-		<h1>Hello, WORLD</h1>
-	</div>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+		<a href="" class="navbar-brand">
+			<img src="jpg/me.jpg" height="30" weight="30" alt="logo">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
+
+
+		<div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a href="#" class="nav-link">Home</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">Pricing</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">About us</a>
+				</li>
+			</ul>
+		</div>
+
+
+		<form class="form-inline my-2 my-lg-0">
+			<input type="text" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0">Search</button>
+		</form>
+
+	</nav>
+	
+	Hello World
 
 
 
