--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		</form>
 
 	</nav>
-	
-	
+
+
 	<!--cлайдер!-->
 
 	<div class="container-fluid p-0">
@@ -83,9 +83,39 @@
 			</a>
 			<a href="#carouselExampleIndicators" class="carousel-control-next" role="button" data-slide="next">
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
+				<span class="sr-only">Next</span>
 			</a>
+		</div>
+	</div>
 
+	<div class="container-fluid">
+		<div class="container">
+			<div class="row text-center justify-content-center">
+				<div class="col-12 col-sm-4 col-lg-3"><img src="jpg/three.jpg" alt="" class="w-100">
+					<h3>Моя булочка любимая</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum inventore ratione aspernatur est expedita ducimus sit dolorum voluptas molestiae at?</p>
+				</div>
+				<div class="col-12 col-sm-4 col-lg-3"><img src="jpg/three.jpg" alt="" class="w-100">
+					<h3>Моя булочка любимая</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum inventore ratione aspernatur est expedita ducimus sit dolorum voluptas molestiae at?</p>
+				</div>
+				<div class="col-12 col-sm-4 col-lg-3"><img src="jpg/two.jpg" alt="" class="w-100">
+					<h3>Булька</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum inventore ratione aspernatur est expedita ducimus sit dolorum voluptas molestiae at?</p>
+				</div>
+				<div class="col-12 col-sm-4 col-lg-3"><img src="jpg/one.jpg" alt="" class="w-100">
+					<h3>Моя булочка</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum inventore ratione aspernatur est expedita ducimus sit dolorum voluptas molestiae at?</p>
+				</div>
+				<div class="col-12 col-sm-4 col-lg-3"><img src="jpg/three.jpg" alt="" class="w-100">
+					<h3>Софачка</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum inventore ratione aspernatur est expedita ducimus sit dolorum voluptas molestiae at?</p>
+				</div>
+				<div class="col-12 col-sm-4 col-lg-3"><img src="jpg/one.jpg" alt="" class="w-100">
+					<h3>Любовь моя</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum inventore ratione aspernatur est expedita ducimus sit dolorum voluptas molestiae at?</p>
+				</div>
+			</div>
 		</div>
 	</div>
 
