--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<a href="#" class="nav-link">Home</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">Pricing</a>
+					<a href="#" class="nav-link" data-toggle="modal" data-target="#exampleModal">Pricing</a>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">About us</a>
@@ -52,6 +52,9 @@
 		</form>
 
 	</nav>
+
+
+
 
 
 	<!--cлайдер!-->
@@ -88,6 +91,11 @@
 		</div>
 	</div>
 
+
+
+
+	<!--сетка-->
+
 	<div class="container-fluid">
 		<div class="container">
 			<div class="row text-center justify-content-center">
@@ -122,9 +130,39 @@
 
 
 
+	<!--модально окно-->
+	
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="container-fluid">
+						<div class="row text-center">
+							<div class="col-4">go4</div>
+							<div class="col-8">go8</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button class="btn btn-primary">Save</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script type='text/javascript' src="script/script.js"></script>
 </body>
 
 </html>
