--- a/index.html
+++ b/index.html
@@ -182,16 +182,27 @@
 
 
 
+
+	<!--margin и padding-->
+
 	<div class="container">
-		<div class="w-25 p-5" style="background-color: green">25</div>
-		<div class="w-25 p-5" style="background-color: green">25</div>
-		<div class="w-25 p-5" style="background-color: green">25</div>
-		<div class="w-25 p-5" style="background-color: green">25</div>
+		<div class="w-25 p-3" style="background-color: green">25</div>
+		<div class="w-50 p-3" style="background-color: green">50</div>
+		<div class="w-75 p-3" style="background-color: green">75</div>
+		<div class="w-100 p-3" style="background-color: green">100</div>
 	</div>
 
 
+	<div class="container">
+		<img src="jpg/one.jpg" alt="" class="mw-100">
 
-
+		<div style="height:200px;">
+			<div class="h-25 d-inline-block" style="width:100px; background-color: red;">25</div>
+			<div class="h-50 d-inline-block" style="width:100px; background-color: red;">50</div>
+			<div class="h-75 d-inline-block" style="width:100px; background-color: red;">75</div>
+			<div class="h-100 d-inline-block" style="width:100px; background-color: red;">100</div>
+		</div>
+	</div>
 
 
 
