--- a/index.html
+++ b/index.html
@@ -207,6 +207,24 @@
 
 
 
+	<!--flexbox-->
+
+	<div class="container">
+		<div class="d-flex p-3 justify-content-center" style="height:300px;">
+			<!-- flex-column-reverse -->
+			<!--justify-content-end, -start, -around, -center -->
+			<div class="m-3 align-self-end order-2" style="background-color:red;">Flex item 1</div>
+			<!--align-items-end, -center, -baseline, -stretch -->
+			<div class="m-3 align-self-center order-3" style="background-color:blue;">Flex item 2</div>
+			<div class="m-3 order-1" style="background-color:green;">Flex item 3</div>
+		</div>
+	</div>
+
+
+
+
+
+
 
 
 
