--- a/index.html
+++ b/index.html
@@ -224,6 +224,79 @@
 
 
 
+	<!--компоненты адаптивные карты-->
+
+	<div class="container-fluid mt-5" style="background-color:#eee;">
+		<div class="container p-5">
+			<div class="row">
+				<div class="col">
+					<div class="card text-right" style="">
+						<img src="jpg/resume.jpg" alt="" class="card-img-top">
+						<div class="card-body">
+							<h4 class="card-title">Title</h4>
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis placeat doloremque provident in commodi, aspernatur deleniti autem, ipsa. Culpa iste distinctio illo rem id voluptatibus, ullam dolorum dolorem dignissimos ab?</p>
+							<a href="#" class="btn btn-primary">Submit</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col">
+					<div class="card text-center" style="">
+						<div class="card-img-overlay">
+							<div class="card-body">
+								<h4 class="card-title">Title</h4>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis placeat doloremque provident in commodi, aspernatur deleniti autem, ipsa. Culpa iste distinctio illo rem id voluptatibus, ullam dolorum dolorem dignissimos ab?</p>
+								<a href="#" class="btn btn-primary">Submit</a>
+							</div>
+							<img src="jpg/resume.jpg" alt="" class="card-img-bottom">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="container-fluid mt-5" style="background-color:green;">
+		<div class="container p-5">
+			<div class="card-group">			<!-- card-deck -->
+				<div class="card text-center" style="width:20rem;">
+					<img src="jpg/resume.jpg" alt="" class="card-img-top">
+					<div class="card-body">
+						<h4 class="card-title">Title</h4>
+						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis placeat doloremque provident in commodi, aspernatur deleniti autem, ipsa. Culpa iste distinctio illo rem id voluptatibus, ullam dolorum dolorem dignissimos ab?</p>
+						<a href="#" class="btn btn-primary">Submit</a>
+					</div>
+				</div>
+				<div class="card text-right" style="width:20rem;">
+					<img src="jpg/resume.jpg" alt="" class="card-img-bottom">
+					<div class="card-body">
+						<h4 class="card-title">Title</h4>
+						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis placeat doloremque provident in commodi, aspernatur deleniti autem, ipsa. Culpa iste distinctio illo rem id voluptatibus, ullam dolorum dolorem dignissimos ab?</p>
+						<a href="#" class="btn btn-primary">Submit</a>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card text-center" style="">
+						<div class="card-img-overlay">
+							<div class="card-body">
+								<h4 class="card-title">Title</h4>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis placeat doloremque provident in commodi, aspernatur deleniti autem, ipsa. Culpa iste distinctio illo rem id voluptatibus, ullam dolorum dolorem dignissimos ab?</p>
+								<a href="#" class="btn btn-primary">Submit</a>
+							</div>
+							<img src="jpg/resume.jpg" alt="" class="card-img-bottom">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
 
 
 
