--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
 
 	<div class="container-fluid mt-5" style="background-color:green;">
 		<div class="container p-5">
-			<div class="card-group">			<!-- card-deck -->
+			<div class="card-group">
+				<!-- card-deck -->
 				<div class="card text-center" style="width:20rem;">
 					<img src="jpg/resume.jpg" alt="" class="card-img-top">
 					<div class="card-body">
@@ -295,7 +296,27 @@
 
 
 
+	<!-- Видеоконтент адаптивный -->
 
+	<div class="container p-5">
+		<div class="row">
+			<div class="col">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe src="https://www.youtube.com/embed/TbEBvBppnY0" class="embed-responsive-item" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="col">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe src="https://www.youtube.com/embed/TbEBvBppnY0" class="embed-responsive-item" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="col">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe src="https://www.youtube.com/embed/TbEBvBppnY0" class="embed-responsive-item" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
